fix alignment index.html

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,8 +4,8 @@ html, body {
 }
 
 a {
-  text-decoration: none;
-  color: black;
+    text-decoration: none;
+    color: black;
 }
 #row1 {
   height: 20%;
@@ -22,11 +22,15 @@ a {
   background-color: rgba(160,160,160,0.3);
 }
 
-.nav p {
-  position: relative;
+.nav a {
+  position: absolute;
   margin: 0px;
   top: 50%;
+  left: 50%;
+  height: 20%;
+  width: 50%;
   margin-top: -5%;
+  margin-left: -25%;
 }
 
 #row2 {
